# npm2100_nrf54l15_BFG

./: CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: npm2100ek_pmic.dtsi  nrf54l15dk_nrf54l15_cpuapp.overlay
src/: main.c
src/adc/: npm_adc.c  npm_adc.h
src/ble/: ble_periph_pmic.c  ble_periph_pmic.h
src/common/: threads.h  tsync.h
src/pmic/: pmic.c  pmic.h
